name:                cryptographer2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cryptographer2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  js-sources:          externalSources/dropbox/dropbox.js
                       ,externalSources/Net/Net.js
                       ,externalSources/JQuery/jquery-2.2.4.min.js
  hs-source-dirs:      src
  exposed-modules:     Lib
                       ,Cryptographer.Net
  build-depends:       base >= 4.7 && < 5
                       ,async
                       ,cipher-blowfish >= 0.0.3
                       ,containers
                       ,control-monad-exception
                       ,ghcjs-base
                       ,text
                       ,transformers
  default-language:    Haskell2010

executable cryptographer2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       UI.Context
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , containers
                     , control-monad-exception
                     , cryptographer2
                     , text
                     , reflex
                     , reflex-dom
                     , transformers
  default-language:    Haskell2010

test-suite cryptographer2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptographer2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cryptographer2
